[package]
name = "rejson"
version = "0.5.1"
authors = ["David Muto <david.muto@gmail.com>"]
categories = ["command-line-utilities"]
description = "A command line utility for managing secrets"
edition = "2021"
homepage = "https://github.com/pseudomuto/rejson"
license = "MIT"
repository = "https://github.com/pseudomuto/rejson"
rust-version = "1.83.0"

[[bin]]
name = "rejson"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
clap = { version = "4.4.2", features = ["derive", "env"] }
lazy_static = "1.4"
nacl = "0.5"
rand = { version = "0.8", features = ["std"] }
regex = "1.9"
serde_json = { version = "1.0", features = ["preserve_order"] }
shell-escape = "0.1"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
